refactoring [build scripts]: optimizing `java.cmd`
- dropping IDE-specific `--add-opens` options: build scripts don't need the full set
- adding an ability to skip JRE download if requested
- cleanup (minor optimization; typos; formatting)

GitOrigin-RevId: 1685a83acd00e3d6ce5243dcf145eef62a149bc9